Archive2/9a/aa7134ef8a6c28/output
main.cpp:44:20: error: out-of-line definition of 'operator+' does not match any declaration in 'Maths<T>'
Maths<T> Maths<T>::operator+(const Maths<T>& rhs){ return Maths._lhs + rhs; }
                   ^~~~~~~~
main.cpp:44:59: error: 'Maths' does not refer to a value
Maths<T> Maths<T>::operator+(const Maths<T>& rhs){ return Maths._lhs + rhs; }
                                                          ^
main.cpp:3:26: note: declared here
template <class T> class Maths{
                         ^
main.cpp:47:20: error: out-of-line definition of 'operator-' does not match any declaration in 'Maths<T>'
Maths<T> Maths<T>::operator-(const Maths<T>& rhs){ return Maths._lhs - rhs; }
                   ^~~~~~~~
main.cpp:47:59: error: 'Maths' does not refer to a value
Maths<T> Maths<T>::operator-(const Maths<T>& rhs){ return Maths._lhs - rhs; }
                                                          ^
main.cpp:3:26: note: declared here
template <class T> class Maths{
                         ^
main.cpp:50:20: error: out-of-line definition of 'operator*' does not match any declaration in 'Maths<T>'
Maths<T> Maths<T>::operator*(const Maths<T>& rhs){ return Maths._lhs * rhs; }
                   ^~~~~~~~
main.cpp:50:59: error: 'Maths' does not refer to a value
Maths<T> Maths<T>::operator*(const Maths<T>& rhs){ return Maths._lhs * rhs; }
                                                          ^
main.cpp:3:26: note: declared here
template <class T> class Maths{
                         ^
6 errors generated.
